Make squares a fixed size + implemented horizontal scrolling

--- a/src/components/environment/World.scss
+++ b/src/components/environment/World.scss
@@ -47,7 +47,9 @@
   }
 
   .world-square {
-    width: 100%;
+    height: all.$squareSize;
+    width: all.$squareSize;
+
     position: relative;
     background-color: all.$worldColor;
 
